# MDC-Challenge-2025

./: .dockerignore  .env.example  .gitignore  CHALLENGE_OVERVIEW.md  Dockerfile.api  Kaggle MDC inference plan.md  Logical_Flow_20250731.md  Makefile  README.md  TROUBLESHOOTING_CITATIONS.md  chunking_results.json  docker-compose.yml  dockerfile  document_processor.py  kaggle_submission_plan.md  main.py  make_wheels.sh  pipeline_flow.md  preprocessing.py  preprocessing_pipeline_guide.md  pyproject.toml  quick_train.sh  requirements-inference.txt  run_training.sh
api/: __init__.py  chunk_and_embed_api.py  duckdb_schema.py  duckdb_utils.py  main.py  migrate_data.py  parse_doc_api.py
artifacts/: bioregistry_data.json  citation_patterns.yaml  entity_patterns.yaml  mdc_challenge.db.wal
configs/: chunking.yaml  chunking_offline.yaml  development_config.json  fast_config.json  production_config.json
deprecated/: preprocessing.py
docs/: pdf_to_xml_conversion_guide.md  pdf_to_xml_guide.md  semantic_chunking_script_guide.md
guides/: chunking_refactor_guide.md  preprocessing_implementation_guide_20250702.md
notebooks/: chunking.ipynb  dataset_clustering.ipynb  dim_reduction.ipynb  duckdb.ipynb  label_doc_mapping.ipynb  neighborhood_stats.ipynb  preprocessing.ipynb  retrieval.ipynb  training_input.ipynb  training_input_chunks.ipynb  troubleshooting_retriever.ipynb
reports/: full_doc_parsing_report_20250708_191119.md  full_doc_parsing_report_20250709_125209.md  full_doc_parsing_report_20250709_174020.md  full_doc_parsing_summary_20250708_191119.json  full_doc_parsing_summary_20250709_125209.json  full_doc_parsing_summary_20250709_174020.json  pdf_to_xml_conversion_report_20250708_173043.md  pdf_to_xml_conversion_report_20250709_115229.md  pdf_to_xml_conversion_summary_20250708_173043.json  pdf_to_xml_conversion_summary_20250709_115229.json  prechunking_eda_report_20250708_162213.md  prechunking_eda_summary_20250708_162213.json  semantic_chunking_report_20250709_155618.md  semantic_chunking_summary_20250709_155618.json
scripts/: audit_citations.py  build_kaggle_zip.sh  demo_prechunking_eda.py  import_dataset_labels.py  new_prototypes_tmp.py  run_chunking_pipeline.py  run_clustering_pipeline.py  run_full_doc_parsing.py  run_pdf_to_xml_conversion.py  run_prechunking_eda.py  run_tests.py
src/: baml_wrapper.py  clustering.py  construct_datasets.py  construct_queries.py  dimensionality_reduction.py  document_parser.py  extract_pdf_text_light.py  extract_pdf_text_unstructured.py  filter_training.py  get_citation_entities.py  get_document_objects.py  get_prototypes.py  globals.py  helpers.py  label_mapper.py  models.py  patterns.py  pdf_to_xml_conversion.py  pipeline_config.py  preprocess_train.py  retriever.py  run_clustering.py  run_dataset_construction.py  umap.py  (+11 more)
(+186 files in other folders)
