[project]
name = "mdc-challenge-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "baml-py==0.88.0",
    "duckdb>=1.3.2",
    "fastapi>=0.116.1",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "leidenalg>=0.10.2",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "nltk>=3.9.1",
    "numpy>=1.24.0,<2.3.0",
    "openai>=1.96.0",
    "pandas>=2.3.0",
    "psutil>=7.0.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "python-igraph>=0.11.9",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "regex>=2024.11.6", # high-perf pattern engine
    "requests>=2.32.4",
    "rich>=14.0.0",
    "scikit-learn>=1.7.0",
    "tiktoken>=0.8.0", # exact GPT-token counts
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
    "umap-learn>=0.5.4",
]
